# ff-2024-create-python-package

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
TESTS/: test numberCruncher.py
src/mypackage/: add_number.py
src/supernormal/: __init__.py  numberCruncher.py
