################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "supernormal"

version = "0.1.0"

description = "a package that crunches numbers"
authors = [
    { name = "0FAUXS", email = "msdslumin@gmail.com" },
]
license = "MIT"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = []

[project.urls]
Documentation = "https://supernormal.readthedocs.io"
Download = "https://pypi.org/project/supernormal/#files"

[project.optional-dependencies]
dev = [
    "hatch",
    "pre-commit",
]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/supernormal"]

# Create Hatch environment
[tool.hatch.envs.test]
description = """Environment that runs the test suite"""
extra-dependencies = [
    "pytest",
    "pytest-cov",
]

[[tool.hatch.envs.test.matrix]]
python = ["5.4.0","3.9","3.10", "3.11"]

[tool.hatch.envs.test.scripts]
run_test = "pytest TESTS {args:--cov=supernormal --cov-report=term-missing}"


[tool.hatch.envs.format]
description = """Environment that runs the code formatters."""
extra-dependencies = [
    "black",
    "isort",
]

[tool.hatch.envs.format.scripts]
format_code = [
    "isort .",
    "black ."
]